Add documentation and get categories
